--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2926"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation(num):\n",
-    "    # This function returns 1+2+3+....+num\n",
-    "    \n",
-    "    # Your code here:"
+    "    return sum(i for i in range(num+1))\n",
+    "summation(num)\n",
+    "               \n"
    ]
   },
   {
@@ -60,14 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "def summation2(*args):\n",
     "    # This function returns the sum of *args\n",
-    "    \n",
-    "    # Your code here:"
+    "    return "
    ]
   },
   {
@@ -79,14 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "def summation3(a, b, c):\n",
     "    # This function returns a+b+c\n",
-    "    \n",
-    "    # Your code here:"
+    "    return sum(i for i in range(a,c))"
    ]
   },
   {
@@ -107,14 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return sum(i for i in kwargs[1:])"
    ]
   },
   {
@@ -143,10 +153,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def summation5(.....):\n",
+    "def summation5(a,b,c,d,e):\n",
+    "    lista=[]\n",
+    "    sum(i for i in a,b,c)\n",
+    "    lista.append(i)\n",
+    "    sum(x for x in d)\n",
+    "    lista.append(x)\n",
+    "def input(*e):\n",
+    "    sum[e(i)]\n",
+    "    lista.append(x)\n",
+    "return sum(lista)\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "  "
    ]
   },
   {
@@ -371,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
