--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +71,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def summation2(*args):\n",
     "    # This function returns the sum of *args\n",
-    "    return "
+    "    return sum(i for i in array)\n",
+    "summation2()"
    ]
   },
   {
@@ -89,13 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation3(a, b, c):\n",
+    "array=[3, 8, 16]\n",
+    "def summation3(a,b,c):\n",
     "    # This function returns a+b+c\n",
-    "    return sum(i for i in range(a,c))"
+    "    return sum(i for i in array)\n",
+    "summation3(*array)"
    ]
   },
   {
@@ -107,24 +132,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "print() argument after ** must be a mapping, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-da3ac3bf5f3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdictionary\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: print() argument after ** must be a mapping, not str"
+     ]
+    }
+   ],
    "source": [
-    "dictionary={'red':3, 'blue':8, 'green':24, 'orange':12, 'purple':10}"
+    "dictionary={'red':3, 'blue':8, 'green':24, 'orange':12, 'purple':10}\n",
+    "\n",
+    "\n",
+    "for i in dictionary:\n",
+    "    print(key,values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "dictionary={'red':3, 'blue':8, 'green':24, 'orange':12, 'purple':10}\n",
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
     "    \n",
     "    # Your code here:\n",
-    "    return sum(i for i in kwargs[1:])"
+    "    return sum(kwargs.values()) - kwargs[\"red\"]\n",
+    "summation4(**dictionary)"
    ]
   },
   {
@@ -136,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,20 +203,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "769"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def summation5(a,b,c,d,e):\n",
-    "    lista=[]\n",
-    "    sum(i for i in a,b,c)\n",
-    "    lista.append(i)\n",
-    "    sum(x for x in d)\n",
-    "    lista.append(x)\n",
-    "def input(*e):\n",
-    "    sum[e(i)]\n",
-    "    lista.append(x)\n",
-    "return sum(lista)\n",
+    "def summation5(*args,**key):\n",
+    "    return sum(args) + sum(key.values())\n",
+    "summation5(a,b,c,*d,**e)\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
     "    # Your code here:\n",
@@ -262,9 +320,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# We can also iterate through an iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
@@ -285,14 +353,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "iterator = iter([1,2,3])\n",
     "def divisible2(iterator):\n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
     "    # Input: Iterable\n",
     "    # Output: Integer\n",
+    "\n",
+    "    for i in iterator:\n",
+    "        if i %2==0:\n",
+    "            return i\n",
+    "    else:\n",
+    "        return 0\n",
+    "divisible2(iterator)\n",
+    "            \n",
+    "    \n",
     "    \n",
     "    # Sample Input: iter([1,2,3])\n",
     "    # Sample Output: 2\n",
